--- a/agent.html
+++ b/agent.html
@@ -102,9 +102,14 @@
                         class="bg-gray-900 text-white px-6 py-2.5 rounded-xl font-semibold hover:bg-brand-600 transition-all shadow-md active:scale-95">Get
                         Started</a>
 
-                    <div id="profile" class="hidden cursor-pointer group relative">
-                        <div class="w-10 h-10 bg-brand-600 rounded-full flex items-center justify-center text-white font-bold overflow-hidden shadow-md"
+                    <div id="profile" class="cursor-pointer group relative">
+                        <div class="w-10 h-10 bg-brand-600 rounded-full flex items-center justify-center text-white font-bold overflow-hidden shadow-md group-hover:shadow-lg transition-all active:scale-95"
                             id="profile-content">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                            </svg>
                         </div>
                     </div>
                 </div>
@@ -113,8 +118,7 @@
     </nav>
 
     <div id="profile-info"
-        class="bg-white hidden p-4 rounded-2xl fixed top-20 z-50 mt-3 w-[300px] right-10 shadow-2xl border border-gray-100">
-        <!-- Profile info content -->
+        class="bg-white hidden p-5 rounded-2xl fixed top-20 z-[100] min-w-[300px] right-10 shadow-2xl border border-gray-100 shadow-brand-100/20">
     </div>
 
     <!-- Agent Hero Section -->
