--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Navbar -->
     <nav class="fixed top-0 left-0 right-0 z-50 px-6 py-4 transition-all duration-300" id="navbar">
         <div
-            class="max-w-7xl mx-auto flex items-center justify-between glass rounded-2xl px-6 py-3 shadow-sm border border-white/40">
+            class="max-w-7xl mx-auto flex items-center justify-between glass rounded-2xl px-4 md:px-6 py-3 shadow-sm border border-white/40 relative">
             <div class="flex items-center gap-2">
                 <div
                     class="w-10 h-10 bg-brand-600 rounded-xl flex items-center justify-center text-white font-bold text-xl shadow-lg shadow-brand-200">
@@ -87,12 +87,12 @@
             </div>
 
             <div class="flex items-center gap-4">
-                <div id="auth-buttons" class="flex items-center gap-4">
+                <div id="auth-buttons" class="flex items-center gap-2 md:gap-4">
                     <a href="login.html" id="login"
-                        class="text-gray-900 font-medium hidden sm:block hover:text-brand-600 transition-colors">Sign
+                        class="text-gray-900 font-medium hidden sm:block hover:text-brand-600 transition-colors text-sm md:text-base">Sign
                         In</a>
                     <a href="signup.html" id="signup"
-                        class="bg-gray-900 text-white px-6 py-2.5 rounded-xl font-semibold hover:bg-brand-600 transition-all shadow-md active:scale-95">Get
+                        class="bg-gray-900 text-white px-4 md:px-6 py-2 md:py-2.5 rounded-xl font-semibold hover:bg-brand-600 transition-all shadow-md active:scale-95 text-sm md:text-base">Get
                         Started</a>
 
 
@@ -108,6 +108,30 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Mobile Menu Toggle Button -->
+                <button id="mobile-menu-btn"
+                    class="md:hidden flex items-center justify-center w-10 h-10 ml-2 bg-white/50 rounded-xl border border-gray-200 text-gray-900 focus:outline-none transition-colors hover:bg-white/80 active:scale-95">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h16M4 18h16" />
+                    </svg>
+                </button>
+            </div>
+
+            <!-- Mobile Menu Dropdown -->
+            <div id="mobile-menu"
+                class="absolute top-[110%] left-0 right-0 glass rounded-2xl p-4 shadow-xl border border-white/40 flex flex-col gap-4 text-center transition-all duration-300 opacity-0 translate-y-[-10px] pointer-events-none md:hidden z-50">
+                <a href="#"
+                    class="block text-gray-900 font-medium py-2 hover:bg-white/50 rounded-xl transition-colors">Home</a>
+                <a href="properties.html"
+                    class="block text-brand-600 font-bold py-2 hover:bg-white/50 rounded-xl transition-colors">Properties</a>
+                <a href="findagent.html"
+                    class="block text-gray-900 font-medium py-2 hover:bg-white/50 rounded-xl transition-colors">Find
+                    Agents</a>
+                <a href="#"
+                    class="block text-gray-900 font-medium py-2 hover:bg-white/50 rounded-xl transition-colors">About</a>
             </div>
         </div>
     </nav>
